--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site for create notes"/><link rel="manifest" href="/manifest.json"/><title>Notes App</title><script defer="defer" src="/static/js/main.921f3905.js"></script><link href="/static/css/main.a4c74c40.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site for create notes" />
+  <link rel="manifest" href="https://aaronflores11.github.io/notes-app/manifest.json" />
+  <title>Notes App</title>
+  <script defer="defer" src="https://aaronflores11.github.io/notes-app/static/js/main.921f3905.js"></script>
+  <link href="https://aaronflores11.github.io/notes-app/static/css/main.a4c74c40.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
+</html>
